--- a/#src/index.html
+++ b/#src/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 @include('_head.html', {})
 <body>
 	<div class="wrapper">
+		@include('_header.html',{})
 		<main class="page">
 
 		</main> <!-- /.page -->
