--- a/#src/_header.html
+++ b/#src/_header.html
@@ -1,22 +1,27 @@
 <header class="main-header">
     <!-- aside and top -->
     <div class="main-header__aside">
-        <a class="main-header__video" href="#" title="Смотреть видео">
-            <svg class="video-icon" width="18" height="18">
-                <use xlink:href="img/sprite.svg#video">
-            </svg>
-        </a>
-
-        <a class="main-header__photo" href="#" title="Смотреть фото">
-            <svg class="photo-icon" width="18" height="18">
-                <use xlink:href="img/sprite.svg#photo">
-            </svg>
-        </a>
-
+        <ul class="main-header__media media-list">
+            <li class="media-list__item">
+                <a class="media-list__lk" href="#" title="Смотреть фото">
+                    <svg class="media-list__icon" width="22" height="22">
+                        <use xlink:href="img/sprite.svg#photo">
+                    </svg>
+                </a>
+            </li>
+            <li class="media-list__item">
+                <a class="media-list__lk" href="#" title="Смотреть видео">
+                    <svg class="media-list__icon" width="22" height="22">
+                        <use xlink:href="img/sprite.svg#video">
+                    </svg>
+                </a>
+            </li>
+        </ul>
+        
         <a class="logo main-header__logo" href="index.html" title="Главная">gazeta.ru</a>
 
-        <button class="search" type="button" data-modal="#search" title="Поиск">
-            <svg class="search__icon" width="18" height="18">
+        <button class="main-header__search" type="button" data-modal="#search" title="Поиск">
+            <svg class="main-header__icon" width="22" height="22">
                 <use xlink:href="img/sprite.svg#search">
             </svg>
         </button>
@@ -101,12 +106,14 @@
             </div>
 
             <div class="main-header__col">
-                <a class="logo main-header__logo logo--main" href="index.html" title="Главная">gazeta.ru</a>
-                <p class="main-header__date">13 мая, понедельник</p>
-                <p class="main-header__weather">
-                    Ростов-на-Дону
-                    <span class="main-header__thermometer">+23 C&deg;</span>
-                </p>
+                <div class="main-header__inner">
+                    <a class="logo logo--main" href="index.html" title="Главная">gazeta.ru</a>
+                    <p class="main-header__date">13 мая, понедельник</p>
+                    <p class="main-header__weather">
+                        Ростов-на-Дону
+                        <span class="main-header__thermometer">+23 C&deg;</span>
+                    </p>
+                </div>
             </div>
             
             <div class="main-header__col">
@@ -127,39 +134,115 @@
         </div><!--/.main-header__row-->
     </div><!--/.main-header__middle-->
 
-    <!-- main navigation -->
-    <nav class="main-header__nav main-nav">
-        <ul class="main-nav__list">
-            <li class="main-nav__row">
-                <a class="main-nav__link" href="#">Новости</a>
+    <!-- rubrics navigation -->
+    <nav class="main-header__rubrics rubrics">
+        <ul class="rubrics__list">
+            <li class="rubrics__row">
+                <a class="rubrics__link" href="#">Новости</a>
             </li>
-            <li class="main-nav__row">
-                <a class="main-nav__link" href="#">Политика</a>
+            <li class="rubrics__row">
+                <a class="rubrics__link" href="#">Политика</a>
             </li>
-            <li class="main-nav__row">
-                <a class="main-nav__link" href="#">Бизнесс</a>
+            <li class="rubrics__row">
+                <a class="rubrics__link" href="#">Бизнесс</a>
             </li>
-            <li class="main-nav__row">
-                <a class="main-nav__link" href="#">Oбщество</a>
+            <li class="rubrics__row">
+                <a class="rubrics__link" href="#">Oбщество</a>
             </li>
-            <li class="main-nav__row">
-                <a class="main-nav__link" href="#">Армия</a>
+            <li class="rubrics__row">
+                <a class="rubrics__link" href="#">Армия</a>
             </li>
-            <li class="main-nav__row">
-                <a class="main-nav__link" href="#">Наука</a>
+            <li class="rubrics__row">
+                <a class="rubrics__link" href="#">Наука</a>
             </li>
-            <li class="main-nav__row">
-                <a class="main-nav__link" href="#">Культура</a>
+            <li class="rubrics__row">
+                <a class="rubrics__link" href="#">Культура</a>
             </li>
-            <li class="main-nav__row">
-                <a class="main-nav__link" href="#">Технологии</a>
+            <li class="rubrics__row">
+                <a class="rubrics__link" href="#">Технологии</a>
             </li>
-            <li class="main-nav__row">
-                <a class="main-nav__link" href="#">Авто</a>
+            <li class="rubrics__row">
+                <a class="rubrics__link" href="#">Авто</a>
             </li>
-            <li class="main-nav__row">
-                <a class="main-nav__link" href="#">Спорт</a>
+            <li class="rubrics__row">
+                <a class="rubrics__link" href="#">Спорт</a>
             </li>
         </ul>
     </nav>
+
+    <!-- burger/main navigation -->
+    <div class="main-header__nav main-nav">
+        <ul class="main-nav__menu">
+            <li class="main-nav__col">
+                <button class="main-nav__btn main-nav__btn--active" type="button">Рубрики</>
+            </li>
+            <li class="main-nav__col">
+                <button class="main-nav__btn" type="button">Редакция</>
+            </li>
+        </ul>
+
+        <div class="main-nav__inner">
+
+            <footer class="main-nav__footer">
+                <!-- search -->
+                <form class="main-nav__search search" action="#" method="GET" name="search">
+                    <label class="visually-hidden" for="search__input">Поиск по сайту</label>
+                    <input class="search__input" id="search__input" name="search" type="text" placeholder="Поиск по сайту" required>
+
+                    <button class="search__btn" type="submit">
+                        Найти
+                        <svg class="search__icon" width="22" height="22">
+                            <use xlink:href="img/sprite.svg#search">
+                        </svg>
+                    </button>
+                </form>
+
+                <!-- social -->
+                <ul class="main-nav__social social" aria-label="Мы в соцсетях">
+                    <li class="social__item">
+                        <a class="social__link" href="#" title="Фейсбук">
+                            <svg class="social__icon" width="18" height="16">
+                                <use xlink:href="img/sprite.svg#fb">
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social__item">
+                        <a class="social__link" href="#" title="Гугл плюс">
+                            <svg class="social__icon" width="22" height="20">
+                                <use xlink:href="img/sprite.svg#google">
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social__item">
+                        <a class="social__link" href="#" title="Маил ру">
+                            <svg class="social__icon" width="18" height="16">
+                                <use xlink:href="img/sprite.svg#mail">
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social__item">
+                        <a class="social__link" href="#" title="Вконтакте">
+                            <svg class="social__icon" width="20" height="20">
+                                <use xlink:href="img/sprite.svg#vk">
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social__item">
+                        <a class="social__link" href="#" title="Твиттер">
+                            <svg class="social__icon" width="20" height="20">
+                                <use xlink:href="img/sprite.svg#twi">
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social__item">
+                        <a class="social__link" href="#" title="Лента рсс">
+                            <svg class="social__icon" width="18" height="16">
+                                <use xlink:href="img/sprite.svg#rss">
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </footer>
+        </div><!--/.main-nav__wrap-->
+    </div><!--/.main-header__nav-->
 </header>
