--- a/#src/index.html
+++ b/#src/index.html
@@ -14,6 +14,6 @@
 	
 	<!-- Modal windows-->
 	@include('_modal.html',{})
-	<script src="js/script.min.js"></script>
+	<script src="js/script.js"></script>
 </body>
 </html>
