--- a/#src/_header.html
+++ b/#src/_header.html
@@ -174,7 +174,7 @@
     <div class="main-header__nav main-nav">
         <ul class="main-nav__menu">
             <li class="main-nav__col">
-                <button class="main-nav__btn main-nav__btn--active" type="button">Рубрики</button>
+                <button class="main-nav__btn active" type="button">Рубрики</button>
             </li>
             <li class="main-nav__col">
                 <button class="main-nav__btn" type="button">Редакция</button>
