--- a/#src/_header.html
+++ b/#src/_header.html
@@ -171,7 +171,7 @@
     </nav>
     
     <!-- burger/main navigation -->
-    <div class="main-header__nav main-nav">
+    <div class="main-nav">
         <ul class="main-nav__menu">
             <li class="main-nav__col">
                 <button class="main-nav__btn active" type="button">Рубрики</button>
