--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -29,21 +29,20 @@
 
         <div class="main-footer__body">
             <a class="logo logo--footer" href="index.html" title="Главная">gazeta.ru</a>
-            <p class="main-footer__info">&copy; АО «Gazeta.ru» 1999–2016 — Главные новости дня <br> Контакты и обратная связь</p>
+            <p class="main-footer__info">&copy; АО «Gazeta.ru» 1999–2016 — Главные новости&nbsp;дня <br> Контакты и обратная связь</p>
         </div>
 
         <ul class="main-footer__copy">
             <li class="main-footer__col">
-                <a class="main-footer__partners" href="#">Рамблек</a>
+                <a class="main-footer__partners" href="#" title="Наш партнер поисковая система Рамблер">Рамблер/</a>
             </li>
 
             <li class="main-footer__col">
-               <p class="main-footer__text">Свидетельство о регистрации СМИ Эл № ФС77-69495 выдано федеральной службой по надзору в сфере связи, информационных технологий и массовых коммуникаций (Роскомнадзор) 13.10.2015 г.</p>
+               <p class="main-footer__text">Свидетельство о регистрации СМИ Эл № ФС77-69495 выдано федеральной службой по надзору в сфере связи, информационных технологий и массовых коммуникаций (Роскомнадзор) 13.10.2015&nbsp;г.</p>
             </li>
 
             <li class="main-footer__col">
                <img class="main-footer__age" src="img/footer/18+.png" alt="18 +">
             </li>
-           
         </ul>
 </footer>
