added modal search

--- a/#src/_header.html
+++ b/#src/_header.html
@@ -20,7 +20,7 @@
         
         <a class="logo main-header__logo" href="index.html" title="Главная">gazeta.ru</a>
 
-        <button class="main-header__search-btn" type="button" data-modal="#search" title="Поиск">
+        <button class="main-header__search-btn modal-link" type="button" data-modal="#search" title="Поиск">
             <svg class="main-header__icon" width="22" height="22">
                 <use xlink:href="img/sprite.svg#search"></use>
             </svg>
