--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -22,7 +22,7 @@
                 </li>
 
                 <li class="edition__row">
-                    <a class="edition__link" href="#">Информация об ограниченияч</a>
+                    <a class="edition__link" href="#">Информация об ограничения</a>
                 </li>
             </ul>
         </nav>
