--- a/#src/_head.html
+++ b/#src/_head.html
@@ -1,5 +1,5 @@
 <head>
-	<title>Главная Газета.ру</title>
+	<title>Главная</title>
 	<link rel="stylesheet" href="css/style.min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
