added main news block

--- a/#src/_modal.html
+++ b/#src/_modal.html
@@ -6,8 +6,8 @@
     <div class="modal__content">
          <!-- search -->
          <form class="search search--modal" action="#" method="GET" name="search">
-            <label class="visually-hidden" for="search__input">Поиск по сайту</label>
-            <input class="search__input" id="search__input" name="search" type="text" placeholder="Поиск по сайту" required autocomplete="off">
+            <label class="visually-hidden" for="m-search">Поиск по сайту</label>
+            <input class="search__input" id="m-search" name="search" type="text" placeholder="Поиск по сайту" required autocomplete="off">
 
             <button class="search__btn" type="submit">
                 Найти
