--- a/#src/index.html
+++ b/#src/index.html
@@ -7,6 +7,7 @@
 			@include('_header.html',{})
 			<main class="page">
 				<h1 class="visually-hidden">Новости России и мира. Газета ру</h1>
+
 				<div class="topics">
 					<aside class="topics__aside">
 						<!-- hours news -->
@@ -39,7 +40,7 @@
 										</li>
 			
 										<li class="hours-news__slide">
-											<a class="hours-news__lk" href="#">Греф предсказал "Конец эпохи нефти и газа" в России</a>
+											<a class="hours-news__lk" href="#">Российских дипломатов выдворили из Чехии</a>
 			
 											<div class="hours-news__info article-info">
 												<a class="article-info__rubric" href="#">Политика</a>
@@ -50,7 +51,7 @@
 										</li>
 			
 										<li class="hours-news__slide">
-											<a class="hours-news__lk" href="#">Греф предсказал "Конец эпохи нефти и газа" в России</a>
+											<a class="hours-news__lk" href="#">На северный поток два снова наложенны санкции</a>
 			
 											<div class="hours-news__info article-info">
 												<a class="article-info__rubric" href="#">Политика</a>
@@ -61,7 +62,7 @@
 										</li>
 			
 										<li class="hours-news__slide">
-											<a class="hours-news__lk" href="#">Греф предсказал "Конец эпохи нефти и газа" в России</a>
+											<a class="hours-news__lk" href="#">Россия совершила серию кибератак на важные предприятия США</a>
 			
 											<div class="hours-news__info article-info">
 												<a class="article-info__rubric" href="#">Политика</a>
@@ -72,7 +73,7 @@
 										</li>
 			
 										<li class="hours-news__slide">
-											<a class="hours-news__lk" href="#">Греф предсказал "Конец эпохи нефти и газа" в России</a>
+											<a class="hours-news__lk" href="#">Петров и Баширов фигурируют в новых эпизодах.</a>
 			
 											<div class="hours-news__info article-info">
 												<a class="article-info__rubric" href="#">Политика</a>
