changed big post

--- a/#src/index.html
+++ b/#src/index.html
@@ -221,7 +221,7 @@
 								<img class="big-post__img" src="img/photos/photo.jpg" alt="Donald Tramp" width="660" height="610">
 							</a>
 
-							<a class="big-post__content" href="#">
+							<div class="big-post__content">
 								<h2 class="big-post__title title title--hot">Инаугурация<br>Дональда Трампа</h2>
 								
 								<div class="big-post__about article-info article-info--big">
@@ -235,17 +235,17 @@
 								<div class="big-post__desc">
 									<p class="article-text crop-text">Столица США Вашингтон сегодня превратиласьв декорацию к главному политическому карнавалу Америки — инаугурации президента. «Газета.Ru» вела онлайн-трансляцию goto</p>
 								</div>
-							</a>
 
-							<footer class="big-post__footer">
-								<div class="big-post__col">
-									<a class="big-post__commnets commnets commnets--light" href="#" title="comments">70</a>
-								</div>
-
-								<div class="big-post__col">
-									<button class="big-post__quick quick" type="button">Быстрый просмотр</button>
-								</div>
-							</footer>
+								<footer class="big-post__footer">
+									<div class="big-post__col">
+										<a class="big-post__commnets commnets commnets--light" href="#" title="comments">70</a>
+									</div>
+	
+									<div class="big-post__col">
+										<button class="big-post__quick quick" type="button">Быстрый просмотр</button>
+									</div>
+								</footer>
+							</div>
 						</article>
 
 						<!-- top-news -->
@@ -609,7 +609,7 @@
 									<img class="big-post__img" src="img/photos/photo10.jpg" alt="Donald Tramp" width="660" height="610">
 								</a>
 	
-								<a class="big-post__content" href="#">
+								<div class="big-post__content">
 									<h2 class="big-post__title title title--hot">Полиция подавила бунт в лагере для беженцев</h2>
 									
 									<div class="big-post__about article-info article-info--big">
@@ -619,11 +619,11 @@
 											<span class="article-info__hours">15:23</span>
 										</time>
 									</div>
-								</a>
-	
-								<footer class="big-post__footer">
-									<p class="author">Алексей Топалов</p>
-								</footer>
+
+									<footer class="big-post__footer">
+										<p class="author">Алексей Топалов</p>
+									</footer>
+								</div>
 							</article>
 	
 							<article class="post js-post js-news js-sport">
