--- a/#src/_header.html
+++ b/#src/_header.html
@@ -313,4 +313,6 @@
             </div>
         </div><!--/.main-nav__wrap-->
     </div><!--/.main-header__nav-->
+    
+    <div class="main-header__overlay"></div>
 </header>
