--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -42,7 +42,7 @@
             </li>
 
             <li class="main-footer__col">
-               <img class="main-footer__age" src="img/footer/18+.png" alt="18 +">
+               <img class="main-footer__age" src="img/footer/18+.png" alt="18 +" width="48" height="48">
             </li>
         </ul>
 </footer>
