--- a/#src/index.html
+++ b/#src/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
-@include('_head.html', {})
+@include('_head.html', {
+	"title":"Главная"
+})
 <body>
 	<div class="wrapper">
 		<div class="root">
@@ -828,7 +830,7 @@
 								</div>
 	
 								<div class="article__content">
-									<a class="article__lk" href="#">
+									<a class="article__lk" href="article.html">
 										<h2 class="article__title title">Детройт — город-призрак</h2>
 									</a>
 		
